SDC-8641. Remove internal JDK API usage in Omniture origin
Change-Id: I12dc889aa97373c7d422cb00b7ea3710a11672c8
Reviewed-on: https://review.streamsets.net/13548
Tested-by: StreamSets CI <streamsets-ci-spam@streamsets.com>
Reviewed-by: Madhukar Devaraju <madhu@streamsets.com>